# cranky

./: .clang-format  CMakeLists.txt  LICENSE  README.md
inc/: args.hpp  project.hpp
src/: args.cpp  main.cpp  project.cpp
user_templates/c/console/: CMakeLists.txt
user_templates/c/glfw_opengl/: CMakeLists.txt  PreLoad.cmake
user_templates/c/glfw_opengl/src/: main.c
user_templates/cpp/console/: .clang-format  CMakeLists.txt
user_templates/cpp/console/src/: main.cpp
user_templates/cpp/glfw_opengl/: CMakeLists.txt
user_templates/cpp/glfw_opengl/src/: main.cpp
